Fix missing padding from previously-available Tailwind class

--- a/resources/css/addon.css
+++ b/resources/css/addon.css
@@ -20,6 +20,9 @@
     padding: 0.5rem;
     padding-left: 0;
 }
+.hyperlink-sortable-item--sortable .hyperlink-item-wrapper--with-controls {
+    padding-left: 1.5rem;
+}
 
 .hyperlink-sortable-item.draggable-source--is-dragging {
     opacity: 0.5;
